--- a/cmakelists/autotest/cpp/CMakeLists.txt
+++ b/cmakelists/autotest/cpp/CMakeLists.txt
@@ -157,6 +157,24 @@ gdal_autotest_target(testblockcachewrite test-block-cache-write testblockcachewr
 gdal_autotest_target(testblockcachelimits test-block-cache-limit testblockcachelimits.cpp "--debug ON")
 gdal_autotest_target(testmultithreadedwriting test-multi-threaded-writing testmultithreadedwriting.cpp "")
 gdal_autotest_target(testdestroy test-destroy testdestroy.cpp "")
-gdal_autotest_target(test_include_from_c_file testa-include-from-C-file test_include_from_c_file.c "")
-gdal_autotest_target(test_c_include_from_cpp_file testa-C-include-from-CPP-file test_c_include_from_cpp_file.cpp "")
-gdal_autotest_target(testperfcopywords testa-performance-copy-words testperfcopywords.cpp "")
+gdal_autotest_target(test_include_from_c_file test-include-from-C-file test_include_from_c_file.c "")
+gdal_autotest_target(test_c_include_from_cpp_file test-C-include-from-CPP-file test_c_include_from_cpp_file.cpp "")
+gdal_autotest_target(testperfcopywords test-performance-copy-words testperfcopywords.cpp "")
+
+add_custom_target(
+        quicktest
+        DEPENDS test-unit
+        test-block-cache-1
+        test-block-cache-2
+        test-block-cache-3
+        test-block-cache-4
+        test-block-cache-5
+        test-block-cache-6
+        test-copy-words
+        test-closed-on-destroy-DM
+        test-threaded-condition
+        test-virtual-memory
+        test-block-cache-write
+        test-block-cache-limit
+        test-multi-threaded-writing
+        test-destroy)
