--- a/cmakelists/gdal/frmts/pdf/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/pdf/CMakeLists.txt
@@ -23,6 +23,7 @@ if (HAVE_POPPLER
     OR HAVE_PODOFO
     OR HAVE_PDFIUM)
   if (HAVE_POPPLER)
+    target_include_directories(gdal_PDF PRIVATE ${POPPLER_INCLUDE_DIRS} ${POPPLER_INCLUDE_DIRS}/../)
     gdal_target_link_libraries(TARGET gdal_PDF LIBRARIES POPPLER::Poppler)
     string(REGEX REPLACE "([0-9]+)\\.([0-9]+).*" "\\1" POPPLER_VERSION_MAJOR ${POPPLER_VERSION_STRING})
     string(REGEX REPLACE "([0-9]+)\\.([0-9]+).*" "\\2" POPPLER_VERSION_MINOR ${POPPLER_VERSION_STRING})
