Drop same HAVE_* variable
Signed-off-by: Hiroshi Miura <miurahr@linux.com>

--- a/cmakelists/gdal/ogr/ogrsf_frmts/CMakeLists.txt
+++ b/cmakelists/gdal/ogr/ogrsf_frmts/CMakeLists.txt
@@ -62,48 +62,48 @@ ogr_optional_driver(mapml MapML)
 ogr_dependent_driver(gpx "GPX - GPS Exchange Format" "HAVE_EXPAT")
 ogr_dependent_driver(gmlas GMLAS "HAVE_XERCESC;HAVE_JSONC;OGR_ENABLE_PGDUMP")
 ogr_dependent_driver(svg "Scalable Vector Graphics" "HAVE_EXPAT")
-ogr_dependent_driver(csw CSW "HAVE_CURL")
+ogr_dependent_driver(csw CSW "CURL_FOUND")
 ogr_dependent_driver(dods DODS "HAVE_DAP;HAVE_LIBXML2")
 ogr_dependent_driver(dwg DWG "HAVE_TEIGHA")
 ogr_dependent_driver(filegdb FileGDB "HAVE_FGDB")
 # ogr_dependent_driver(gft GFT "HAVE_CURL")
-ogr_dependent_driver(libkml LibKML "HAVE_LIBKML;HAVE_BOOST")
+ogr_dependent_driver(libkml LibKML "LIBKML_FOUND;Boost_FOUND")
 ogr_dependent_driver(nas "NAS/ALKIS" "HAVE_XERCESC")
-ogr_dependent_driver(plscenes PLSCENES "HAVE_CURL")
+ogr_dependent_driver(plscenes PLSCENES "CURL_FOUND")
 ogr_dependent_driver(sosi "SOSI:Systematic Organization of Spatial Information" "HAVE_SOCI")
-ogr_dependent_driver(wfs "OGC WFS service" "HAVE_CURL")
+ogr_dependent_driver(wfs "OGC WFS service" "CURL_FOUND")
 ogr_dependent_driver(dds "DDS" "HAVE_CRNLIB")
-ogr_dependent_driver(ngw "NextGIS Web" "HAVE_CURL")
+ogr_dependent_driver(ngw "NextGIS Web" "CURL_FOUND")
 
 ogr_optional_driver(elastic ELASTIC)
 ogr_optional_driver(idrisi IDRISI)
 
 ogr_dependent_driver(pds "Planetary Data Systems TABLE" "GDAL_ENABLE_FRMT_PDS")
 
-ogr_dependent_driver(sqlite "SQLite3 / Spatialite RDBMS" "HAVE_SQLITE3")
+ogr_dependent_driver(sqlite "SQLite3 / Spatialite RDBMS" "SQLITE3_FOUND")
 # GeoPacage is a part of sqlite driver. when enable sqlite, automatically add a gpkg
 if (OGR_ENABLE_SQLITE)
   add_subdirectory(gpkg)
 endif ()
 add_feature_info(ogr_GPKG OGR_ENABLE_SQLITE "GeoPackage")
 ogr_dependent_driver(osm "OpenStreetMap XML and PBF" "OGR_ENABLE_SQLITE")
-ogr_dependent_driver(vfk "Czech Cadastral Exchange Data Format" "HAVE_SQLITE3")
-ogr_dependent_driver(mvt "MVT" "HAVE_SQLITE3")
+ogr_dependent_driver(vfk "Czech Cadastral Exchange Data Format" "SQLITE3_FOUND")
+ogr_dependent_driver(mvt "MVT" "SQLITE3_FOUND")
 
 # ODBC/POSTGRES/MYSQL/INGRESS/COUCHDB
-ogr_dependent_driver(amigocloud AMIGOCLOUD "HAVE_CURL;OGR_ENABLE_PGDUMP")
-ogr_dependent_driver(cloudant Cloudant "HAVE_CURL")
-ogr_dependent_driver(couchdb CouchDB "HAVE_CURL")
+ogr_dependent_driver(amigocloud AMIGOCLOUD "CURL_FOUND;OGR_ENABLE_PGDUMP")
+ogr_dependent_driver(cloudant Cloudant "CURL_FOUND")
+ogr_dependent_driver(couchdb CouchDB "CURL_FOUND")
 ogr_dependent_driver(carto CARTO "OGR_ENABLE_PGDUMP")
 ogr_dependent_driver(ingress INGRESS "HAVE_INGRESS")
 ogr_dependent_driver(ili ILI "HAVE_XERCESC")
 ogr_dependent_driver(mysql MySQL "HAVE_MYSQL")
 ogr_dependent_driver(pg PostGIS "HAVE_POSTGRESQL")
-ogr_dependent_driver(geomedia GEOMEDIA "HAVE_ODBC")
-ogr_dependent_driver(mssqlspatial MSSQLSPATIAL "HAVE_ODBC")
-ogr_dependent_driver(odbc ODBC "HAVE_ODBC")
-ogr_dependent_driver(walk "WALK Spatial data" "HAVE_ODBC")
-ogr_dependent_driver(pgeo "PGEO" "HAVE_ODBC")
+ogr_dependent_driver(geomedia GEOMEDIA "ODBC_FOUND")
+ogr_dependent_driver(mssqlspatial MSSQLSPATIAL "ODBC_FOUND")
+ogr_dependent_driver(odbc ODBC "ODBC_FOUND")
+ogr_dependent_driver(walk "WALK Spatial data" "ODBC_FOUND")
+ogr_dependent_driver(pgeo "PGEO" "ODBC_FOUND")
 
 # for dependency problem, grass is not always compiled in.
 ogr_optional_driver(grass "GRASS Vector format")
@@ -116,7 +116,7 @@ if (OGR_ENABLE_GRASS)
 endif ()
 
 ogr_dependent_driver(xlsx "Microsoft Office Excel(xlsx)" "HAVE_EXPAT")
-ogr_dependent_driver(xls "Microsoft Office Excel(xls)" "HAVE_FREEXL")
+ogr_dependent_driver(xls "Microsoft Office Excel(xls)" "FREEXL_FOUND")
 ogr_optional_driver(mongodb "MongoDB")
 ogr_optional_driver(cad "OpenCAD")
 
