--- a/cmakelists/gdal/frmts/CMakeLists.txt
+++ b/cmakelists/gdal/frmts/CMakeLists.txt
@@ -98,22 +98,22 @@ gdal_optional_format(rik "RIK -- Swedish Grid Maps")
 # formats with external library dependency
 gdal_dependent_format(fits "FIT Driver" "HAVE_CFITSIO")
 gdal_dependent_format(rasdaman "Rasdaman GDAL driver" "HAVE_RASDAMAN")
-gdal_dependent_format(hdf5 "Hierarchical Data Format Release 5 (HDF5)" "HAVE_HDF5")
+gdal_dependent_format(hdf5 "Hierarchical Data Format Release 5 (HDF5)" "HDF5_FOUND")
 gdal_dependent_format(plmosaic "PLMosaic (Planet Labs Mosaics API)" "GDAL_USE_CURL")
 gdal_dependent_format(wms "Web Map Services" "GDAL_USE_CURL")
-gdal_dependent_format(gta "Generic Tagged Arrays" "HAVE_GTA")
+gdal_dependent_format(gta "Generic Tagged Arrays" "HGTA_FOUND")
 gdal_dependent_format(webp "WebP" "HAVE_WEBP")
 gdal_dependent_format(epsilon "Wavelet compressed images" "HAVE_EPSILON")
-gdal_dependent_format(hdf4 "Hierarchical Data Format Release 4 (HDF4)" "HAVE_HDF4;gdal_PDS")
+gdal_dependent_format(hdf4 "Hierarchical Data Format Release 4 (HDF4)" "HDF4_FOUND;gdal_PDS")
 gdal_dependent_format(pdf "Geospatial PDF" "HAVE_PDFLIB")
-gdal_dependent_format(rasterlite "Rasterlite - Rasters in SQLite DB" "HAVE_SQLITE3;OGR_SQLITE")
+gdal_dependent_format(rasterlite "Rasterlite - Rasters in SQLite DB" "SQLITE3_FOUND;OGR_SQLITE")
 gdal_dependent_format(mbtiles "MBTile" "HAVE_SQLITE3")
 gdal_dependent_format(postgisraster "PostGIS Raster driver" "HAVE_POSTGRESQL")
 gdal_dependent_format(bpg "BPG driver" "HAVE_BPG")
 gdal_dependent_format(dods "OPeNDAP Grid Client" "HAVE_DAP")
 gdal_dependent_format(dds "DirectDraw Surface" "HAVE_CRNLIB")
 gdal_dependent_format(kea "Kea" "HAVE_KEA")
-gdal_dependent_format(openjpeg "JPEG2000 driver based on OpenJPEG library" "HAVE_OPENJPEG")
+gdal_dependent_format(openjpeg "JPEG2000 driver based on OpenJPEG library" "OPENJPEG_FOUND")
 gdal_dependent_format(jpegls "JPEG LS" "HAVE_CHARLS")
 gdal_dependent_format(jpeg2000 "JPEG2000 --- Implementation of the JPEG-2000 part 1 (ISO/IEC 15444-1) standard"
                       "HAVE_JASPER")
