--- a/cmakelists/autotest/CMakeLists.txt
+++ b/cmakelists/autotest/CMakeLists.txt
@@ -97,7 +97,8 @@ int main(int argc, char **argv) {
   target_link_libraries(pytest_runner PRIVATE ${Python_LIBRARIES})
   add_custom_target(
     autotest_runner
-    COMMAND ${CMAKE_COMMAND} -E env ${PYTHON_RUN_ENV} $<TARGET_NAME:pytest_runner> -c ${CMAKE_CURRENT_BINARY_DIR}/pytest.ini
+    COMMAND ${CMAKE_COMMAND} -E env ${PYTHON_RUN_ENV} $<TARGET_NAME:pytest_runner> -c
+            ${CMAKE_CURRENT_BINARY_DIR}/pytest.ini
     DEPENDS gdal gdalapps python_binding
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/autotest)
 endif ()
