--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -86,7 +86,7 @@ jobs:
       run: |
         conda install --yes --quiet --name gdalenv curl libiconv icu git python=3.7 swig numpy pytest zlib
         conda install --yes --quiet --name gdalenv -c conda-forge proj geos hdf4 hdf5 \
-            libnetcdf openjpeg poppler libtiff libpng xerces-c expat libxml2 kealib shapelib \
+            libnetcdf openjpeg poppler libtiff libpng xerces-c expat libxml2 kealib \
             cfitsio freexl geotiff jpeg libkml libpq libspatialite libtiff libwebp-base \
             pcre postgresql sqlite tiledb zstd
         python -m pip install -U pip wheel setuptools numpy
